force-app/main/default/objects/Qualification_Question__c/Qualification_Question__c.object-meta.xml
<CustomObject>
    <label>Qualification Question</label>
    <nameField>
        <displayFormat>QQN-{00000}</displayFormat>
        <label>Questions Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qualification Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>