force-app/main/default/objects/Qualification_Question__c/fields/Answer_Options__c.field-meta.xml
<CustomField>
    <fullName>Answer_Options__c</fullName>
    <inlineHelpText>Dropdown values separated with &quot;;&quot;</inlineHelpText>
    <label>Answer Options</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>