force-app/main/default/objects/Qualification_Question__c/fields/Answer_Type__c.field-meta.xml
<CustomField>
    <fullName>Answer_Type__c</fullName>
    <label>Answer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>Dropdown</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Multiselect</fullName>
            </value>
            <value>
                <fullName>MinMax Date</fullName>
            </value>
            <value>
                <fullName>MinMax Currency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>