force-app/main/default/objects/Qualification_Question__c/fields/Use_in_Summary__c.field-meta.xml
<CustomField>
    <fullName>Use_in_Summary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use in Summary</label>
    <type>Checkbox</type>
</CustomField>