force-app/main/default/objects/Qualification_Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Question__c</columns>
    <columns>Object__c</columns>
    <columns>Stage_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>